<resources>
    <string name="app_name">eClothingVintage</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>

    //Signup
    <string name="signup_tvTituloSite">eClothingVintage</string>
    <string name="signup_tvTitulo">Registar</string>
    <string name="signup_hUsername">Username</string>
    <string name="signup_hPrimeiro">Primeiro Nome</string>
    <string name="signup_hUltimo">Ultimo Nome</string>
    <string name="signup_hTelemovel">Telemovel</string>
    <string name="signup_hEmail">Email</string>
    <string name="signup_hPassword">Password</string>
    <string name="signup_btnSignup">Registar</string>

    //Login
    <string name="login_tvTituloSite">eClothingVintage</string>
    <string name="login_tvTitulo">Login</string>
    <string name="login_hUsername">Username</string>
    <string name="login_hPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_tvSignupText">Não tem uma conta?</string>
    <string name="login_btnSignup">Registe-se</string>

    //Update
    <string name="update_tvTitulo">Atualizar dados</string>
    <string name="update_hUsername">Username</string>
    <string name="update_hPrimeiro">Primeiro Nome</string>
    <string name="update_hUltimo">Ultimo Nome</string>
    <string name="update_hTelemovel">Telemovel</string>
    <string name="update_hEmail">Email</string>
    <string name="update_hPassword">Password</string>
    <string name="update_btnUpdate">Atualizar</string>
    <string name="update_tvOr">OU</string>
    <string name="update_btnDelete">Apagar conta</string>

    //Nav Header Main
    <string name="navMain_tvTituloSite">eClothingVintage</string>
    <string name="navMain_tvUsername">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalhes_etNome">Nome</string>
    <string name="detalhes_etGenero">Genero</string>
    <string name="detalhes_etDescricao">Descricao</string>
    <string name="detalhes_etTamanho">Tamanho</string>
    <string name="detalhes_etPreco">Preco</string>
    <string name="detalhes_etCodigo_Produto">Codigo_Produto</string>

</resources>