<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_tvTitulo"
                    android:textSize="28sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/update_hUsername"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/etprimeiroNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/update_hPrimeiro"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                        android:id="@+id/etultimoNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/update_hUltimo"
                        android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/etTelemovel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/update_hTelemovel"
                    android:inputType="number"
                    android:textSize="18sp" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/update_hEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnUpdate"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    app:backgroundTint="@android:color/holo_blue_dark"
                    android:text="@string/update_btnUpdate"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/update_tvOr"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnDelete"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="30dp"
                    app:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/update_btnDelete"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>