<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/tvTituloSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:text="@string/signup_tvTituloSite"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tvTitulo"
                    android:textSize="28sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hUsername"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etprimeiroNome"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_hPrimeiro"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/etultimoNome"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_hUltimo"
                        android:textSize="18sp" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etTelemovel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hTelemovel"
                    android:inputType="number"
                    android:textSize="18sp" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_hPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnSignup"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    app:backgroundTint="@android:color/holo_blue_dark"
                    android:paddingHorizontal="40dp"
                    android:text="@string/signup_btnSignup"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>